examples/test/testpolicy13732.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13732
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key16: value41
      key37: value24
      key10: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value32
      podSelector:
        matchLabels:
          key18: value40
          key41: value47
